--- a/data-collection/Cargo.toml
+++ b/data-collection/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+serenity = { version = "0.12", default-features = false, features = [
+    "client",
+    "gateway",
+    "rustls_backend",
+    "model",
+] }
 crossbeam-channel = "0.5.8"
 once_cell = "1.18.0"
 csv = "1.2.2"
